# client-lwm2m-iotr25

./: build.sh  prepare.sh  snapcraft.yaml
cmd/alpaca-mqtt/: main.go
cmd/configure/: main.go
cmd/jbp-iotr25/: main.go
cmd/test/: main.go
configure/: config.go  configure.go
lwm2m/: CMakeLists.txt  callbacks_device.go  callbacks_snap.go  config.go  m2m.go
lwm2m/src/: gocallbacks.h  libtest.h  lwm2mclient.c  lwm2mclient.h  object_device.c  object_security.c  object_server.c  object_snap.c  object_snap_control.c  system_api.c
mqtt/: config.go  message_snap.go  mqtt.go
objects/: common.go  device.go  snap.go
pivot/: pivot.go
snapdapi/: api_types.go  snapd_client.go
xml/: LWM2M_Snap_Control-v1_0.xml  LWM2M_Snap_Management-v1_0.xml
